--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
           <a href="#" class="nav__link">Come work with us!</a>
         </li>
       </ul>
-      <p class="copyright">&copy; Copyright 2021 by Adnrei Buliga.</p>
+      <p class="copyright">&copy; Copyright 2021 by Andrei Buliga.</p>
     </footer>
   </body>
 </html>
